# Vortexus-Ecommerce

./: .env.cloudflare.app.example  .env.cloudflare.example  .env.docker.local.example  .env.production.example  .gitignore  BACKUP_DISASTER_RECOVERY_TASKS.md  Ecommerce_Production_Security_Checklist.xlsx  LAUNCH_PAYMENT_ERP_CHECKLIST.md  LICENSE  PRODUCTION_DEPLOYMENT_RUNBOOK.md  README.md  SUPPLIER_ONBOARDING_TO_SELLING_TASKS.md  docker-compose.cloudflare.yml  docker-compose.yml  package-lock.json
Backend/: .dockerignore  .env.example  .gitignore  Dockerfile  ERP_INTEGRATION_ARCHITECTURE.md  FRONTEND_HANDOFF.md  README.md  docker-compose.yml  industrial_catalog_template.csv  requirements-ml.txt  requirements.txt  top
Dashboard/: .env.example  Dockerfile  OSCAR_DASHBOARD_GAP_TASKS.md  README.md  nginx.conf  nuxt.config.ts  package-lock.json  package.json
Frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
Product_Microservice/: Dockerfile  README.md  app.js  hybrid_product_agent_task.json  package-lock.json  package.json  server.js
deploy/: Caddyfile  Caddyfile.tunnel
frappe_apps/vortexus_ecommerce_integration/: README.md  pyproject.toml
frappe_apps/vortexus_ecommerce_integration/vortexus_ecommerce_integration/: constants.py  hooks.py  install.py  modules.txt
frappe_apps/vortexus_ecommerce_integration/vortexus_ecommerce_integration/api/: customer.py  inventory.py  order.py
frappe_apps/vortexus_ecommerce_integration/vortexus_ecommerce_integration/events/: sales_order.py
frontendV1/: .env.example  (+7 more)
(+606 files in other folders)
