[project]
name = "vortexus_ecommerce_integration"
authors = [
  { name = "ambundo-ronald" }
]
description = "ERPNext ecommerce bridge for the Vortexus storefront"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
erpnext = ">=15.0.0"
